K8s/easy-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: easyshop-hack
  labels:
    name: easyshop-hack
    environment: production
